fix: nav cont main overflow-x

--- a/src/components/styles/elements/navigation.scss
+++ b/src/components/styles/elements/navigation.scss
@@ -141,8 +141,8 @@ $opacityTransDuration: 0.2s;
     justify-content: flex-start;
     align-items: flex-start;
     max-width: 100%;
-    min-height: 0;
-    overflow-x: hidden;
+    min-height: auto;
+    overflow-x: clip;
   }
 
   .nav-wrap {
